k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devpulse
  labels:
    app: devpluse
    environment: production
