k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devpulse-ingress
  namespace: devpulse
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false" # Set to "true" if you have TLS configured
    # nginx.ingress.kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m" # Adjust as needed for file uploads
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300" # Adjust as needed for long-running requests
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300" # Adjust as needed for long-running requests
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
          - path: /health
            pathType: Exact
            backend:
              service:
                name: backend-service
                port:
                  number: 80
          - path: /ready
            pathType: Exact
            backend:
              service:
                name: backend-service
                port:
                  number: 80
          - path: /metrics
            pathType: Exact
            backend:
              service:
                name: backend-service
                port:
                  number: 80
          - path: /incidents
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
          - path: /retro
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
          - path: /runbooks
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
